# Plotly_data_analysis

./: .gitignore  Bar.xlsx  Panta.xlsx  Plotly_analysis.py  Plotly_excel_template.xlsx  Plotly_v2.5.7.py  README.md  plot_it.py  requirements.txt  setup.cfg  test_app.py
plot_it_scripts/: BioAnalyzer.py  advanced_box.py  akta_module.py  bar_module.py  data_manipulation.py  main_functions.py  octet_module.py  panta_module.py  plotting_script.py  scatter_module.py  scatter_module_v2.py  taylorgram.py  test.py
src/plot_it/: plot_it.py
test_data/: FIDA.xlsx
tests/: test_app.py
tests/test_data/: AKTA.xlsx  Boxplot.xlsx  Scatter.xlsx
