[metadata]
name = plotly_data_analysis
version = 0.0.1
author = Andreas Visbech Madsen
author_email = avima@dtu.dk
description = Makes nice plots from data from various chemistry/biology machines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andreasvisbech/Plotly_data_analysis/
project_urls =
    Bug Tracker = https://github.com/andreasvisbech/Plotly_data_analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.4.2, <2.0.0
    openpyxl>=3.0.9,<4.0.0
    scipy>=1.8, <2.0
    numpy>=1.22.3, <2.0.0
    plotly>=5.7.0, <6.0.0
    scikit-learn>=1.0.2,<2.0.0
    peakutils>=1.3.3,<2.0.0
    pytest>=7.1.1,<8.0.0
    kaleido>=0.2.1,<1.0.0
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    plot_it = plot_it.plot_it:entry_point